# prysm

./: .travis-bazelrc  BUILD.bazel  WORKSPACE  chromium-no-sandbox.json  package.json
contracts/validator-registration-contract/: validator_registration.sol
docs/: SHARDING.md
frontend/: BUILD.bazel
frontend/testnet/e2e/: BUILD.bazel
frontend/testnet/e2e/src/: app.e2e-spec.ts
frontend/testnet/src/: BUILD.bazel  index.html  main.dev.ts  main.prod.ts  module-id.js
frontend/testnet/src/app/: BUILD.bazel  app.component.spec.ts  app.component.ts
frontend/testnet/src/assets/images/: BUILD.bazel
frontend/testnet/src/styles/: BUILD.bazel
k8s/beacon-chain/: beacon-chain.deploy.yaml
k8s/monitoring/: cassandra.yml  configmap.yml  jaeger-production-template.yml  jaeger-spark-dependencies.cronjob.yaml
proto/common/: BUILD.bazel
shared/p2p/adapter/tracer/: tracer.go
