load("@bazel_gazelle//:def.bzl", "gazelle")
load("@com_github_atlassian_bazel_tools//gometalinter:def.bzl", "gometalinter")
load("@com_github_atlassian_bazel_tools//goimports:def.bzl", "goimports")
load("@io_kubernetes_build//defs:run_in_workspace.bzl", "workspace_binary")
load("@build_bazel_rules_typescript//:defs.bzl", "ts_config")
load("@io_bazel_rules_webtesting//web:web.bzl", "custom_browser")

prefix = "github.com/prysmaticlabs/prysm"

exports_files([
    "genesis.json",
    "tsconfig.json",
])

# tsconfig used for tests.
ts_config(
    name = "tsconfig-test",
    src = "tsconfig-test.json",
    deps = [":tsconfig.json"],
    visibility = ["//frontend:__subpackages__"],
)

# HACK: add --no-sandbox to chromium
# https://github.com/bazelbuild/bazel/issues/6710
# https://github.com/bazelbuild/rules_webtesting/issues/315
custom_browser(
    name = "chromium-no-sandbox",
    browser = "@io_bazel_rules_webtesting//browsers:chromium-local",
    metadata = "chromium-no-sandbox.json",
    visibility = ["//frontend:__subpackages__"],
)

# gazelle:prefix github.com/prysmaticlabs/prysm
gazelle(
    name = "gazelle",
    prefix = prefix,
)

gometalinter(
    name = "gometalinter",
    config = "//:.gometalinter.json",
    paths = [
        "./...",
    ],
    prefix = prefix,
)

goimports(
    name = "goimports",
    display_diffs = True,
    write = False,
    prefix = prefix,
)

workspace_binary(
    name = "golint",
    cmd = "@com_github_golang_lint//golint",
)
