package(default_visibility = ["//frontend/testnet:__subpackages__"])

load("@angular//:index.bzl", "ng_module")
load("@io_bazel_rules_sass//:defs.bzl", "sass_binary")
load("@build_bazel_rules_typescript//:defs.bzl", "ts_library", "ts_web_test_suite")

sass_binary(
    name = "app-styles",
    src = "app.component.scss",
)

ng_module(
    name = "app",
    srcs = [
        "app.component.ts",
        "app.module.ts",
        "app-routing.module.ts",
    ],
    assets = [
        ":app-styles",
        "app.component.html",
    ],
    tsconfig = "//:tsconfig.json",
    deps = [
        "@angular//packages/core",
        "@angular//packages/platform-browser",
        "@angular//packages/router",
    ],
)

ts_library(
    name = "test_lib",
    testonly = 1,
    srcs = [
        "app.component.spec.ts",
    ],
    deps = [
        ":app",
        "@npm//@types/jasmine",
        "@npm//@types/node",
        "@angular//packages/core/testing",
        "@angular//packages/router/testing",
        "@angular//packages/platform-browser",
        "@angular//packages/platform-browser-dynamic/testing",
    ],
)
